// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendIpfs should error if wrong mnemonic 1`] = `
<div>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 fEprgm"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-1pe22tv-0 eLHRPW flex w-12"
        >
          <div
            class="sc-bdfBwQ iMKUsi mx-auto"
            height="10"
            width="6"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8 "
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                  >
                    <button
                      class="Button__StyledButton-mdtvtf-0 fHYGyx"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="sc-bdfBwQ liSwOQ p-1"
                          height="18"
                          width="15"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background group-hover:bg-theme-primary-50 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 fHYGyx"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ iNulIV p-1"
                      height="18"
                      width="18"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex overflow-hidden items-center rounded-lg"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 fHYGyx"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ iSzUah p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-700"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="flex my-0.5 ml-4 -space-x-2"
            >
              <div
                class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 dark:border-theme-secondary-800"
              >
                <span
                  class="text-theme-secondary-text dark:text-theme-secondary-800"
                >
                  <div
                    class="sc-bdfBwQ fPrsah"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      btc.svg
                    </svg>
                  </div>
                </span>
              </div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="cursor-pointer relative justify-center items-center align-middle rounded-full"
                    data-testid="navbar__useractions"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 kJTPww flex-1"
      >
        <div
          class="container px-10 mx-auto"
        >
          <form
            class="mx-auto max-w-xl"
            data-testid="Form"
          >
            <div>
              <ul
                class="StepIndicator__StepWrapper-sc-15t41is-1 iToWWb"
              >
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 khoCaB"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <div
                    class="space-y-8"
                    data-testid="AuthenticationStep"
                  >
                    <div
                      class="flex justify-between items-end bg-theme-background"
                    >
                      <div
                        class="space-y-4"
                      >
                        <h1
                          class="mb-0 text-4xl"
                          data-testid="header__title"
                        >
                          Authenticate
                        </h1>
                        <div
                          class="text-theme-secondary-text"
                          data-testid="header__subtitle"
                        >
                          Enter your twelve word mnemonic to authenticate the transaction.
                        </div>
                      </div>
                    </div>
                    <fieldset
                      class="FormField__FormFieldStyled-yeauwd-0 qzrKg flex flex-col space-y-2"
                    >
                      <label
                        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
                        data-testid="FormLabel"
                        for="mnemonic"
                      >
                        Mnemonic
                        <div
                          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                          data-testid="FormLabel__required"
                        />
                      </label>
                      <div
                        class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD max-w-20"
                        data-testid="InputPassword"
                      >
                        <input
                          aria-invalid="true"
                          class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pr-18"
                          data-testid="AuthenticationStep__mnemonic"
                          name="mnemonic"
                          type="password"
                        />
                        <div
                          class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO my-px mr-4 mr-12"
                        >
                          <span
                            data-errortext="Invalid Mnemonic"
                            data-testid="Input-error"
                          >
                            <div
                              class="sc-bdfBwQ iyevwF text-theme-danger-500"
                              height="20"
                              width="20"
                            >
                              <svg>
                                alert-warning.svg
                              </svg>
                            </div>
                          </span>
                        </div>
                        <div
                          class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO my-px mr-4"
                        >
                          <button
                            class="flex justify-center items-center w-full h-full text-2xl focus:outline-none text-theme-primary-300 dark:text-theme-secondary-600"
                            data-testid="InputPassword__toggle"
                            type="button"
                          >
                            <div
                              class="sc-bdfBwQ fPrsah"
                              height="1em"
                              width="1em"
                            >
                              <svg>
                                eye.svg
                              </svg>
                            </div>
                          </button>
                        </div>
                      </div>
                    </fieldset>
                  </div>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-2"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 iUSBMV"
                    data-testid="SendIpfs__button--back"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Back
                    </div>
                  </button>
                  <button
                    class="Button__StyledButton-mdtvtf-0 kwcZQn"
                    data-testid="SendIpfs__button--submit"
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ bfBhNR"
                        height="14"
                        width="14"
                      >
                        <svg>
                          send.svg
                        </svg>
                      </div>
                      <span>
                        Send
                      </span>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SendIpfs should render form step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="SendIpfs__form-step"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-4xl"
          data-testid="header__title"
        >
          IPFS
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Store an IPFS hash on the network.
        </div>
      </div>
    </div>
    <div
      class="space-y-8 SendTransactionForm"
    >
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
          data-testid="FormLabel"
          for="network"
        >
          Cryptoasset
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div>
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SendTransactionForm__network-menu"
            data-testid="SelectNetwork"
            role="combobox"
          >
            <label
              for="SendTransactionForm__network-input"
              id="SendTransactionForm__network-label"
            />
            <div
              class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
              data-testid="SelectNetworkInput"
            >
              <div
                class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonStartStyle-sc-1obbdqe-1 epSJiV gnQfLB px-4"
              >
                <div
                  class="Circle-uw7h4j-0 blBpcG border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500"
                  data-testid="SelectNetworkInput__network"
                />
              </div>
              <input
                aria-autocomplete="list"
                aria-controls="SendTransactionForm__network-menu"
                aria-labelledby="SendTransactionForm__network-label"
                autocomplete="off"
                class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pl-15"
                data-testid="SelectNetworkInput__input"
                id="SendTransactionForm__network-input"
                placeholder="Enter a cryptoasset name"
                value=""
              />
            </div>
          </div>
          <div
            class=""
          >
            <ul
              aria-labelledby="SendTransactionForm__network-label"
              class="grid grid-cols-6 gap-3"
              id="SendTransactionForm__network-menu"
              role="listbox"
            />
          </div>
        </div>
      </fieldset>
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
          data-testid="FormLabel"
          for="senderAddress"
        >
          Sender
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div
          data-testid="sender-address"
        >
          <div>
            <button
              class="SelectAddressstyles__SelectAddressWrapper-vvcyzs-0 ksbSWA SelectAddress  "
              data-testid="SelectAddress__wrapper"
              type="button"
            >
              <div
                class="Circle-uw7h4j-0 blBpcG mr-3 ml-4 bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
              />
              <div
                class="inline-flex items-center no-ligatures"
              />
              <div
                class="flex absolute right-4 items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </button>
            <input
              class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures hidden"
              data-testid="SelectAddress__input"
              name="senderAddress"
              readonly=""
              value=""
            />
          </div>
        </div>
      </fieldset>
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
          data-testid="FormLabel"
          for="hash"
        >
          IPFS Hash
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div
          class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
        >
          <input
            class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pr-20"
            data-testid="Input__hash"
            name="hash"
            placeholder=" "
            type="text"
            value=""
          />
        </div>
      </fieldset>
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
          data-testid="FormLabel"
          for="fee"
        >
          Transaction Fee
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div
          class="flex space-x-2"
          data-testid="InputFee"
        >
          <div
            class="flex-1"
          >
            <div
              class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
            >
              <input
                class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures"
                data-testid="InputCurrency"
                disabled=""
                name="fee"
                type="text"
                value="0"
              />
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SendIpfs should render review step 1`] = `
<DocumentFragment>
  <section
    data-testid="SendIpfs__review-step"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-4xl"
          data-testid="header__title"
        >
          Transaction Review
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Review the IPFS transaction details before sending
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 coAmnd mt-8 no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Cryptoasset
        </div>
        <div
          class="font-semibold"
        >
          ARK Devnet
        </div>
      </div>
      <div
        aria-label="ARK Devnet"
        class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 text-theme-primary-400"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Sender
        </div>
        <div
          class="font-semibold"
        >
          <div
            class="inline-flex items-center no-ligatures"
          >
            <span
              class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
              data-testid="address__wallet-name"
            >
              <span
                class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                data-testid="TruncateEnd"
              >
                ARK Wallet 1
              </span>
            </span>
            <span
              class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
              data-testid="address__wallet-address"
            >
              D8rr7B…s6YUYD
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex items-center -space-x-2"
      >
        <div
          class="Circle-uw7h4j-0 JkqUV border-theme-text text-theme-text dark:border-theme-secondary-600 dark:text-theme-secondary-600"
        >
          <div
            class="sc-bdfBwQ catSEV"
            height="25"
            width="25"
          >
            <svg>
              delegate.svg
            </svg>
          </div>
        </div>
        <div
          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
          data-testid="Avatar"
        >
          <div
            class="w-full h-full"
          >
            <img
              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          IPFS Hash
        </div>
        <div
          class="font-semibold"
        >
          <span
            class="break-all"
          >
            QmXoypizjW3WknFiJnKLwHCnL72vedxjQkDDP1mXWo6uco
          </span>
        </div>
      </div>
      <div
        class="Circle-uw7h4j-0 JkqUV border-theme-text"
      >
        <div
          class="sc-bdfBwQ ceUzTr"
          height="23"
          width="21"
        >
          <svg>
            ipfs.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="mt-2"
    >
      <div
        class="rounded-lg border border-theme-secondary-300 dark:border-theme-secondary-800"
      >
        <div
          class="relative p-4"
        >
          <div
            class="flex divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
          >
            <div
              class="flex flex-col w-1/2 justify-center px-4 py-2"
            >
              <span
                class="TotalAmountBox__AmountLabel-sc-178fnso-0 gGuMGd"
              >
                Transaction Amount
              </span>
              <span
                class="mt-1 text-lg font-semibold"
                data-testid="total-amount-box__transaction-amount"
              >
                0 DARK
              </span>
            </div>
            <div
              class="flex flex-col w-1/2 justify-center px-4 py-2 text-right"
            >
              <span
                class="TotalAmountBox__AmountLabel-sc-178fnso-0 gGuMGd"
              >
                Transaction Fee
              </span>
              <span
                class="mt-1 text-lg font-semibold"
                data-testid="total-amount-box__transaction-fee"
              >
                0.1 DARK
              </span>
            </div>
          </div>
          <div
            class="absolute transform top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2"
          >
            <div
              class="py-2 ml-px bg-theme-background text-theme-secondary-900 dark:text-theme-secondary-600"
            >
              <div
                class="sc-bdfBwQ fPrsah"
                height="1em"
                width="1em"
              >
                <svg>
                  plus.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex flex-col items-center py-6 rounded-b-lg border-t border-theme-secondary-300 dark:border-theme-secondary-800 justfiy-center bg-theme-secondary-100 dark:bg-theme-secondary-800"
        >
          <span
            class="TotalAmountBox__AmountLabel-sc-178fnso-0 gGuMGd"
          >
            Total Amount
          </span>
          <span
            class="text-2xl font-bold"
            data-testid="total-amount-box__total"
          >
            0.1 DARK
          </span>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SendIpfs should render summary step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="TransactionSuccessful"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-4xl"
          data-testid="header__title"
        >
          Transaction Sent
        </h1>
      </div>
    </div>
    <svg
      class="w-full"
    >
      transaction-success-banner.svg
    </svg>
    <p
      class="text-theme-secondary-text"
    >
      Your transaction was successfully sent. Please monitor the blockchain to ensure your transaction is confirmed and processed. The following is relevant information for your transaction:
    </p>
    <div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 ByQkj undefined no-ligatures"
        data-testid="TransactionDetail"
      >
        <div
          class="flex-1 space-y-2"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
          >
            IPFS Hash
          </div>
          <div
            class="font-semibold"
          />
        </div>
        <div
          class="Circle-uw7h4j-0 JkqUV border-theme-text"
        >
          <div
            class="sc-bdfBwQ bIvGCx"
            height="23"
            width="23"
          >
            <svg>
              ipfs.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SendIpfs should send an IPFS transaction and go back to wallet page 1`] = `
<div>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 fEprgm"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-1pe22tv-0 eLHRPW flex w-12"
        >
          <div
            class="sc-bdfBwQ iMKUsi mx-auto"
            height="10"
            width="6"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8 "
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                  >
                    <button
                      class="Button__StyledButton-mdtvtf-0 fHYGyx"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="sc-bdfBwQ liSwOQ p-1"
                          height="18"
                          width="15"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background group-hover:bg-theme-primary-50 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 fHYGyx"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ iNulIV p-1"
                      height="18"
                      width="18"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex overflow-hidden items-center rounded-lg"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 fHYGyx"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ iSzUah p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-700"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="flex my-0.5 ml-4 -space-x-2"
            >
              <div
                class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 dark:border-theme-secondary-800"
              >
                <span
                  class="text-theme-secondary-text dark:text-theme-secondary-800"
                >
                  <div
                    class="sc-bdfBwQ fPrsah"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      btc.svg
                    </svg>
                  </div>
                </span>
              </div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="cursor-pointer relative justify-center items-center align-middle rounded-full"
                    data-testid="navbar__useractions"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 kJTPww flex-1"
      >
        <div
          class="container px-10 mx-auto"
        >
          <form
            class="mx-auto max-w-xl"
            data-testid="Form"
          >
            <div>
              <ul
                class="StepIndicator__StepWrapper-sc-15t41is-1 iToWWb"
              >
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-8"
                    data-testid="TransactionSuccessful"
                  >
                    <div
                      class="flex justify-between items-end bg-theme-background"
                    >
                      <div
                        class="space-y-4"
                      >
                        <h1
                          class="mb-0 text-4xl"
                          data-testid="header__title"
                        >
                          Transaction Sent
                        </h1>
                      </div>
                    </div>
                    <svg
                      class="w-full"
                    >
                      transaction-success-banner.svg
                    </svg>
                    <p
                      class="text-theme-secondary-text"
                    >
                      Your transaction was successfully sent. Please monitor the blockchain to ensure your transaction is confirmed and processed. The following is relevant information for your transaction:
                    </p>
                    <div>
                      <div
                        class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 coAmnd undefined no-ligatures"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                          >
                            ID
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="flex items-center space-x-3"
                            >
                              <a
                                class="Link__AnchorStyled-sc-1q7sbxr-0 cIuuRE inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
                                data-testid="Link"
                                rel="noopener noreferrer"
                                to="https://dexplorer.ark.io/transaction/1e9b975eff66a731095876c3b6cbff14fd4dec3bb37a4127c46db3d69131067e"
                              >
                                <span
                                  class="underline-dotted"
                                >
                                  <span
                                    class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-primary-700"
                                    data-testid="TruncateMiddle"
                                  >
                                    1e9b975eff66a…db3d69131067e
                                  </span>
                                </span>
                                <div
                                  class="sc-bdfBwQ fPrsah flex-shrink-0 ml-2 text-sm"
                                  data-testid="Link__external"
                                  height="1em"
                                  width="1em"
                                >
                                  <svg>
                                    redirect.svg
                                  </svg>
                                </div>
                              </a>
                              <span
                                class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                              >
                                <div
                                  class="inline-block cursor-pointer"
                                  data-testid="clipboard__wrapper"
                                >
                                  <div
                                    class="sc-bdfBwQ fPrsah"
                                    height="1em"
                                    width="1em"
                                  >
                                    <svg>
                                      copy.svg
                                    </svg>
                                  </div>
                                </div>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                          >
                            Cryptoasset
                          </div>
                          <div
                            class="font-semibold"
                          >
                            ARK Devnet
                          </div>
                        </div>
                        <div
                          aria-label="ARK Devnet"
                          class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 text-theme-primary-400"
                          data-testid="NetworkIcon-ARK-ark.devnet"
                        >
                          <div
                            class="sc-bdfBwQ iyevwF"
                            data-testid="NetworkIcon__icon"
                            height="20"
                            width="20"
                          >
                            <svg>
                              ark.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                      <div
                        class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                          >
                            Sender
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="inline-flex items-center no-ligatures"
                            >
                              <span
                                class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                                data-testid="address__wallet-name"
                              >
                                <span
                                  class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                                  data-testid="TruncateEnd"
                                >
                                  ARK Wallet 1
                                </span>
                              </span>
                              <span
                                class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                                data-testid="address__wallet-address"
                              >
                                D8rr7B…s6YUYD
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="flex items-center -space-x-2"
                        >
                          <div
                            class="Circle-uw7h4j-0 JkqUV border-theme-text text-theme-text dark:border-theme-secondary-600 dark:text-theme-secondary-600"
                          >
                            <div
                              class="sc-bdfBwQ catSEV"
                              height="25"
                              width="25"
                            >
                              <svg>
                                delegate.svg
                              </svg>
                            </div>
                          </div>
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 ByQkj undefined no-ligatures"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                          >
                            IPFS Hash
                          </div>
                          <div
                            class="font-semibold"
                          >
                            QmPRqPTEEwx95WNcSsk6YQk7aGW9hoZbTF9zE92dBj9H68
                          </div>
                        </div>
                        <div
                          class="Circle-uw7h4j-0 JkqUV border-theme-text"
                        >
                          <div
                            class="sc-bdfBwQ bIvGCx"
                            height="23"
                            width="23"
                          >
                            <svg>
                              ipfs.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-2"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 iUSBMV block"
                    data-testid="SendIpfs__button--back-to-wallet"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Back to Wallet
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SendIpfs should send an IPFS transaction and go back to wallet page 2`] = `<div />`;

exports[`SendIpfs should show an error if an invalid IPFS hash is entered 1`] = `
<div>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 fEprgm"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-1pe22tv-0 eLHRPW flex w-12"
        >
          <div
            class="sc-bdfBwQ iMKUsi mx-auto"
            height="10"
            width="6"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8 "
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                  >
                    <button
                      class="Button__StyledButton-mdtvtf-0 fHYGyx"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="sc-bdfBwQ liSwOQ p-1"
                          height="18"
                          width="15"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background group-hover:bg-theme-primary-50 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 fHYGyx"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ iNulIV p-1"
                      height="18"
                      width="18"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex overflow-hidden items-center rounded-lg"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 fHYGyx"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ iSzUah p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-700"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="flex my-0.5 ml-4 -space-x-2"
            >
              <div
                class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 dark:border-theme-secondary-800"
              >
                <span
                  class="text-theme-secondary-text dark:text-theme-secondary-800"
                >
                  <div
                    class="sc-bdfBwQ fPrsah"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      btc.svg
                    </svg>
                  </div>
                </span>
              </div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="cursor-pointer relative justify-center items-center align-middle rounded-full"
                    data-testid="navbar__useractions"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 kJTPww flex-1"
      >
        <div
          class="container px-10 mx-auto"
        >
          <form
            class="mx-auto max-w-xl"
            data-testid="Form"
          >
            <div>
              <ul
                class="StepIndicator__StepWrapper-sc-15t41is-1 iToWWb"
              >
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 khoCaB"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 khoCaB"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 khoCaB"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-8"
                    data-testid="SendIpfs__form-step"
                  >
                    <div
                      class="flex justify-between items-end bg-theme-background"
                    >
                      <div
                        class="space-y-4"
                      >
                        <h1
                          class="mb-0 text-4xl"
                          data-testid="header__title"
                        >
                          IPFS
                        </h1>
                        <div
                          class="text-theme-secondary-text"
                          data-testid="header__subtitle"
                        >
                          Store an IPFS hash on the network.
                        </div>
                      </div>
                    </div>
                    <div
                      class="space-y-8 SendTransactionForm"
                    >
                      <fieldset
                        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
                      >
                        <label
                          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
                          data-testid="FormLabel"
                          for="network"
                        >
                          Cryptoasset
                          <div
                            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                            data-testid="FormLabel__required"
                          />
                        </label>
                        <div>
                          <div
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="SendTransactionForm__network-menu"
                            data-testid="SelectNetwork"
                            role="combobox"
                          >
                            <label
                              for="SendTransactionForm__network-input"
                              id="SendTransactionForm__network-label"
                            />
                            <div
                              class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
                              data-testid="SelectNetworkInput"
                            >
                              <div
                                class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonStartStyle-sc-1obbdqe-1 epSJiV gnQfLB px-4"
                              >
                                <div
                                  aria-label="ARK Devnet"
                                  class="Circle-uw7h4j-0 blBpcG border-theme-primary-100 text-theme-primary-400"
                                  data-testid="SelectNetworkInput__network"
                                >
                                  <div
                                    class="sc-bdfBwQ iyevwF"
                                    data-testid="NetworkIcon__icon"
                                    height="20"
                                    width="20"
                                  >
                                    <svg>
                                      ark.svg
                                    </svg>
                                  </div>
                                </div>
                              </div>
                              <span
                                class="InputGroup__InputAddonStyle-sc-1obbdqe-0 epSJiV py-3 font-normal border border-transparent opacity-50 pointer-events-none pl-15"
                                data-testid="SelectNetworkInput__typeahead"
                              >
                                ARK Devnet
                              </span>
                              <input
                                aria-autocomplete="list"
                                aria-controls="SendTransactionForm__network-menu"
                                aria-labelledby="SendTransactionForm__network-label"
                                autocomplete="off"
                                class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pl-15"
                                data-testid="SelectNetworkInput__input"
                                disabled=""
                                id="SendTransactionForm__network-input"
                                placeholder="Enter a cryptoasset name"
                                value="ARK Devnet"
                              />
                            </div>
                          </div>
                          <div
                            class=""
                          >
                            <ul
                              aria-labelledby="SendTransactionForm__network-label"
                              class="grid grid-cols-6 gap-3"
                              id="SendTransactionForm__network-menu"
                              role="listbox"
                            />
                          </div>
                          <div
                            class="mt-6"
                          >
                            <ul
                              aria-labelledby="SendTransactionForm__network-label"
                              class="grid grid-cols-6 gap-3"
                              id="SendTransactionForm__network-menu"
                              role="listbox"
                            >
                              <li
                                class="inline-block cursor-pointer h-21"
                                data-testid="SelectNetwork__NetworkIcon--container"
                              >
                                <div
                                  aria-label="ARK Devnet"
                                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-success-500 dark:border-theme-success-600 bg-theme-success-100 dark:bg-theme-success-900 text-theme-secondary-600 dark:text-theme-secondary-200"
                                  data-testid="NetworkIcon-ARK-ark.devnet"
                                >
                                  <div
                                    class="sc-bdfBwQ caqoGN"
                                    data-testid="NetworkIcon__icon"
                                    height="30"
                                    width="30"
                                  >
                                    <svg>
                                      ark.svg
                                    </svg>
                                  </div>
                                </div>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </fieldset>
                      <fieldset
                        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
                      >
                        <label
                          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
                          data-testid="FormLabel"
                          for="senderAddress"
                        >
                          Sender
                          <div
                            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                            data-testid="FormLabel__required"
                          />
                        </label>
                        <div
                          data-testid="sender-address"
                        >
                          <div>
                            <button
                              class="SelectAddressstyles__SelectAddressWrapper-vvcyzs-0 ksbSWA SelectAddress  "
                              data-testid="SelectAddress__wrapper"
                              type="button"
                            >
                              <div
                                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kvvaRs mx-4"
                                data-testid="Avatar"
                              >
                                <div
                                  class="w-full h-full"
                                >
                                  <img
                                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                  />
                                </div>
                              </div>
                              <div
                                class="inline-flex items-center no-ligatures"
                              >
                                <span
                                  class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                                  data-testid="address__wallet-address"
                                >
                                  D8rr7B1d6TL6p…sKp1VBMs6YUYD
                                </span>
                              </div>
                              <div
                                class="flex absolute right-4 items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
                              >
                                <div
                                  class="sc-bdfBwQ iyevwF"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    user.svg
                                  </svg>
                                </div>
                              </div>
                            </button>
                            <input
                              class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures hidden"
                              data-testid="SelectAddress__input"
                              name="senderAddress"
                              readonly=""
                              value="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                            />
                          </div>
                        </div>
                      </fieldset>
                      <fieldset
                        class="FormField__FormFieldStyled-yeauwd-0 qzrKg flex flex-col space-y-2"
                      >
                        <label
                          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
                          data-testid="FormLabel"
                          for="hash"
                        >
                          IPFS Hash
                          <div
                            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                            data-testid="FormLabel__required"
                          />
                        </label>
                        <div
                          class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
                        >
                          <input
                            aria-invalid="true"
                            class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pr-20 pr-12"
                            data-testid="Input__hash"
                            name="hash"
                            placeholder=" "
                            type="text"
                            value="invalid-ipfs-hash"
                          />
                          <div
                            class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO my-px mr-4"
                          >
                            <span
                              data-errortext="'IPFS Hash' is invalid"
                              data-testid="Input-error"
                            >
                              <div
                                class="sc-bdfBwQ iyevwF text-theme-danger-500"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  alert-warning.svg
                                </svg>
                              </div>
                            </span>
                          </div>
                        </div>
                      </fieldset>
                      <fieldset
                        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
                      >
                        <label
                          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
                          data-testid="FormLabel"
                          for="fee"
                        >
                          Transaction Fee
                          <div
                            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                            data-testid="FormLabel__required"
                          />
                        </label>
                        <div
                          class="flex space-x-2"
                          data-testid="InputFee"
                        >
                          <div
                            class="flex-1"
                          >
                            <div
                              class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
                            >
                              <input
                                class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures"
                                data-testid="InputCurrency"
                                name="fee"
                                type="text"
                                value="5"
                              />
                            </div>
                          </div>
                          <div
                            class="inline-flex overflow-hidden items-center space-x-2"
                            data-testid="ButtonGroup"
                            role="radiogroup"
                          >
                            <button
                              aria-checked="false"
                              class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                              data-testid="ButtonGroupOption"
                              disabled=""
                              role="radio"
                              type="button"
                            >
                              Slow
                            </button>
                            <button
                              aria-checked="false"
                              class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                              data-testid="ButtonGroupOption"
                              disabled=""
                              role="radio"
                              type="button"
                            >
                              Average
                            </button>
                            <button
                              aria-checked="false"
                              class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                              data-testid="ButtonGroupOption"
                              disabled=""
                              role="radio"
                              type="button"
                            >
                              Fast
                            </button>
                          </div>
                        </div>
                      </fieldset>
                    </div>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-2"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 iUSBMV"
                    data-testid="SendIpfs__button--back"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Back
                    </div>
                  </button>
                  <button
                    class="Button__StyledButton-mdtvtf-0 kwcZQn"
                    data-testid="SendIpfs__button--continue"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Continue
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SendIpfs should show error step and go back 1`] = `
<div>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 fEprgm"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-1pe22tv-0 eLHRPW flex w-12"
        >
          <div
            class="sc-bdfBwQ iMKUsi mx-auto"
            height="10"
            width="6"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8 "
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                  >
                    <button
                      class="Button__StyledButton-mdtvtf-0 fHYGyx"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="sc-bdfBwQ liSwOQ p-1"
                          height="18"
                          width="15"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background group-hover:bg-theme-primary-50 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 fHYGyx"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ iNulIV p-1"
                      height="18"
                      width="18"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex overflow-hidden items-center rounded-lg"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 fHYGyx"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ iSzUah p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-700"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="flex my-0.5 ml-4 -space-x-2"
            >
              <div
                class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 dark:border-theme-secondary-800"
              >
                <span
                  class="text-theme-secondary-text dark:text-theme-secondary-800"
                >
                  <div
                    class="sc-bdfBwQ fPrsah"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      btc.svg
                    </svg>
                  </div>
                </span>
              </div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="cursor-pointer relative justify-center items-center align-middle rounded-full"
                    data-testid="navbar__useractions"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 kJTPww flex-1"
      >
        <div
          class="container px-10 mx-auto"
        >
          <form
            class="mx-auto max-w-xl"
            data-testid="Form"
          >
            <div>
              <ul
                class="StepIndicator__StepWrapper-sc-15t41is-1 iToWWb"
              >
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <div
                    class="space-y-8"
                    data-testid="ErrorStep"
                  >
                    <div
                      class="flex justify-between items-end bg-theme-background"
                    >
                      <div
                        class="space-y-4"
                      >
                        <h1
                          class="mb-0 text-4xl"
                          data-testid="header__title"
                        >
                          Transaction Error
                        </h1>
                      </div>
                    </div>
                    <svg
                      class="w-full"
                    >
                      transaction-error-banner.svg
                    </svg>
                    <p
                      class="text-theme-secondary-text"
                    >
                      An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
                    </p>
                    <div
                      class="flex justify-end space-x-3"
                    >
                      <button
                        class="Button__StyledButton-mdtvtf-0 iUSBMV"
                        data-testid="ErrorStep__wallet-button"
                        type="button"
                      >
                        <div
                          class="flex relative items-center space-x-2"
                        >
                          Back to Wallet
                        </div>
                      </button>
                      <button
                        class="Button__StyledButton-mdtvtf-0 ePkfgQ space-x-2"
                        data-testid="ErrorStep__repeat-button"
                        type="button"
                      >
                        <div
                          class="flex relative items-center space-x-2"
                        >
                          Retry
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-2"
                />
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
